# mvideo-ner-search

./: .gitignore  README.md  real_eda_day_2.md  requirements.txt
apps/: screenshot_apps.py
apps/labeling/: labeling_app.py  run_liza.py  run_nekit.py  run_nikita.py
apps/mvp/: catalog.json  mvp_app.py
artifacts/: attr_type_clf_metrics.json  attr_type_prod_metrics.json  attr_type_silver.json  benchmark.json  categories.txt  complex_eda_method_stats.json  dataset_stats.json  eda_friend_stats.json  layout_translit.json  layout_translit_display.json  layout_translit_final.json  layout_translit_report.txt  markov_attr_eda_stats.json  metrics.json  model_phrases.txt  model_tag_eda_stats.json  ner_crf_metrics.json  ner_eda_stats.json  preprocessed_data_overview.json  preprocessing_stats.json  skus_catalog_sample.json
artifacts/attr_type/: attr_type_silver_meta.json  attr_type_silver_overview.csv  inference_policy.json  logreg_span_char.joblib  logreg_span_ctx.joblib  logreg_span_wordchar.joblib  metrics.json  models_summary.csv  per_class_f1__BEST.csv  per_class_f1__logreg_span_char.csv  per_class_f1__logreg_span_ctx.csv  per_class_f1__logreg_span_wordchar.csv  per_class_f1__sgd_span_ctx_masked.csv  prod_feature_example.json  prod_metrics.json  prod_sanity_10.csv  prod_threshold_curve.csv  sgd_span_ctx_masked.joblib
artifacts/brand_clf/: silver_brand_stats.json  silver_brand_train_preview.csv  silver_clf_readme.md  train_metrics.json
artifacts/click_relevance/: LABELING_GUIDE.md  candidates_to_label.csv  labels.csv
artifacts/dicts/: .gitkeep  brands.txt  categories.txt  protected_brands.txt  spell_aliases.txt
artifacts/gold/: ATTR_SUBTYPES.md  bio_liza.jsonl  gold_stats.json
artifacts/history/: README.md  _log_crf01_v2.err.txt  _log_crf01_v2.txt  _log_crf01_v2b.txt  _log_crf01_v2d.txt  _log_crf02_v2.txt  _log_eval_v2.txt  attr_type_clf.md  brand_clf.md  broken_queries.md  experiments.jsonl  ner_crf.md
artifacts/markov_typer/: markov_eda_stats.json
artifacts/metrics/: attr_type_prod_metrics.json  attr_type_silver.json  general_study_pipeline.json  gliner_finetune.json  gliner_zero_shot.json  gold_eval_summary.json  gold_metrics_attr_type.csv  gold_metrics_ner.csv  latency_sla.json  latency_sla_rows.csv  model_comparison.csv  ner_crf_metrics.json  ner_eda_stats.json  silver_row_counts.csv
artifacts/ner/: silver_overview.csv
cpp/mvlabel/: CMakeLists.txt
cpp/mvlabel/assets/: app.rc
cpp/mvlabel/qml/: BioWizard.qml  Main.qml  MainWindow.qml  MatchPage.qml  SettingsPopup.qml  SplashScreen.qml  Theme.qml
cpp/mvlabel/qml/components/: AccentButton.qml  AppCard.qml  GhostButton.qml  NiceProgress.qml  TitleBar.qml
cpp/mvlabel/src/: labelstore.cpp  labelstore.h  main.cpp
cpp/mvsearch/: CMakeLists.txt
cpp/mvsearch/assets/: app.rc
cpp/mvsearch/qml/: Main.qml  MainWindow.qml  SplashScreen.qml  Theme.qml
cpp/mvsearch/qml/components/: AccentButton.qml  AppCard.qml  AppTextField.qml  FactChip.qml  GhostButton.qml  PageHeader.qml  SideBarItem.qml  StatTile.qml  TitleBar.qml  Toast.qml
cpp/mvsearch/qml/pages/: SearchPage.qml  SettingsPage.qml  StatsPage.qml
cpp/mvsearch/src/: main.cpp  searchengine.cpp  searchengine.h
data/: README.md
data/gold/: ATTR_SUBTYPES.md  bio_liza.jsonl  gold_stats.json
docs/: Roadmap_МВидео_NER.tex  _итоги_frames_d2.tex  _итоги_frames_d3.tex  _итоги_frames_d4.tex  _итоги_frames_d5.tex  data_quality_findings.md  Документация_МВидео_NER.tex  Презентация_День2_EDA.tex  Презентация_День3_MVP.tex  Презентация_День4_Итоги.tex  Презентация_Итоговая.tex
installer/: setup_mvlabel.iss  setup_mvsearch.iss
installer/certs/: mvideo_codesign.cer
models/: README.md  attr_type_clf.joblib  markov_typer.json  markov_typer_attr_clf_baseline.json  ner_crf.pkl  tfidf_queries.joblib  w2v_tfidf_svd.joblib
notebooks/: 01_data_overview.ipynb  02_eda_queries.ipynb  03_eda_products.ipynb  04_similarity_matrices.ipynb  05_click_patterns.ipynb  06_weak_supervision_ner.ipynb  07_train_baseline_classifier.ipynb  08_train_ner_model.ipynb  09_embeddings_similarity.ipynb  10_service_benchmark.ipynb  11_skus_catalog_explore.ipynb  12_end_to_end_demo.ipynb
notebooks/_legacy/: 04_similarity_matrices.ipynb  07_train_baseline_classifier.ipynb  08_train_ner_model.ipynb  09_embeddings_similarity.ipynb  10_service_benchmark.ipynb  11_skus_catalog_explore.ipynb  README.md
notebooks/brand_classifier_train/: 01_classifier_train.ipynb  README.md  _gen_01.py  _run_01.py  _run_01_log.txt  _run_01_stderr.txt  _run_01_stdout.txt  brand_classifier.md  predict_brand.py
notebooks/complex_eda/: 01_eda.ipynb  01_methods_eda.ipynb  02_markov_eda.ipynb  03_click_eda.ipynb  04_model_tag_eda.ipynb  README.md  _fix_fig02.py  _gen_01_eda.py  _gen_02_03.py  _gen_04.py  _run_01_eda.py  _run_02_03.py  _run_02_03_log.txt  _run_04.py  _run_04_log.txt  _run_log.txt
notebooks/crf_ner_classifier/: 01_crf_eda.ipynb  01_crf_eda_report.md  02_crf_classifier.ipynb  02_crf_report.md  README.md  _check_silver.py  _gen_01.py  _gen_02.py  _run_01.py  _run_02.py  crf_ner_status.md
notebooks/general_study/: 01_general_silver.ipynb  01_general_silver_report.md  02_general_train_eval.ipynb  02_general_train_eval_report.md  README.md  _gen_01.py  _gen_02.py  _run_01.py  _run_02.py
notebooks/gliner/: 01_gliner_zero_shot.ipynb  01_gliner_zero_shot_report.md  (+7 more)
scripts/: __init__.py  _gen_notebooks.py  _write_eda_notebooks.py  audit_data_quality.py  benchmark_latency.py  build-macos.sh  build_dictionaries.py  build_embeddings_figures.py  build_notebooks.py  drive_mvp.ps1  drive_mvp2.ps1  drive_mvp3.ps1  eval_on_gold.py  fix_logo_assets.py  gen_brand_clf_figs.py  gen_data_quality_figs.py  gen_day3_assets.py  gen_day3_stacked_figs.py  gen_eda_friend_figs.py  inspect_pptx.py  inspect_skus_pickle.py  log_experiment.py  make_iconset.py  peek_skus.py  run_eda.py  run_pipeline.py  shoot_all_cpp.ps1  shoot_cpp_apps.ps1  shoot_final.ps1  shrink_pres.py  sign-windows.ps1  sync_artifact_layout.py  train_all.py  update-macos-label.sh
src/: __init__.py  data_utils.py
web/: app.js  index.html  styles.css
(+95 files in other folders)
